# preflop-trainer

./: .gitignore  Cargo.toml  GEMINI.md  README.md  TODOs.txt  ranges.toml.example
.github/workflows/: build-gui.yml  checks.yml
crates/preflop-trainer-cli/: Cargo.toml
crates/preflop-trainer-cli/src/: main.rs
crates/preflop-trainer-core/: Cargo.toml  lib.rs
crates/preflop-trainer-core/tests/: bb_defense_tests.rs  game_logic_tests.rs  game_tests.rs  parsing_tests.rs  spot_selection_tests.rs
crates/preflop-trainer-gui/: Cargo.toml
crates/preflop-trainer-gui/src/: main.rs
scripts/: package_gui.py
