[package]
name = "preflop-trainer-core"
version = "0.1.0"
edition = "2024"

[dependencies]
colored = "3.0.0"
rand = "0.9.2"
serde = { version = "1.0.228", features = ["derive"] }
toml = "0.9.8"
lazy_static = "1.4.0"
dirs = "5.0"
include_dir = "0.7"

[lib]
name = "preflop_trainer_core"
path = "lib.rs"
